--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 <tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas      </td><td>Noon Fox </td><td>W 14 - 7 </td><td>
 #3 beat #1</td></tr>
-<tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">Grambling  </td><td>3:30 BTN </td><td>W 70 - 0 </td><td>  </td></tr>
+<tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">Grambling  </td><td>3:30 BTN </td><td>W 70 - 0  </td><td>  </td></tr>
 <tr><td>Sep 13</td><td class="has-text-align-left" data-align="left">Ohio       </td><td>7:00 Peacock </td><td>W 37 - 9 </td><td>  </td></tr>
-<tr><td>Sep 20</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>Bye</td><td>bye</td><td>  </td></tr>
-<tr><td>Sep 27</td><td class="has-text-align-left" data-align="left">@Washington</td><td>3:30 CBS </td><td>W 24 - 6 </td><td>  </td></tr>
-<tr><td>Oct 04</td><td class="has-text-align-left" data-align="left">Minnesota  </td><td>7:30 NBC </td><td>W 42 - 3 </td><td>  </td></tr>
+<tr><td>Sep 20</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>Bye</td><td>bye</td><td>    </td></tr>
+<tr><td>Sep 27</td><td class="has-text-align-left" data-align="left">@Washington</td><td>3:30 CBS </td><td>W 24 - 6  </td><td>  </td></tr>
+<tr><td>Oct 04</td><td class="has-text-align-left" data-align="left">Minnesota  </td><td>7:30 NBC </td><td>W 42 - 3  </td><td>  </td></tr>
 <tr><td>Oct 11</td><td class="has-text-align-left" data-align="left">@Illinois  </td><td>Noon Fox </td><td>W 34 - 16 </td><td>  </td></tr>
-<tr><td>Oct 18</td><td class="has-text-align-left" data-align="left">@Wisconsin </td><td>3:30 CBS </td><td>W</td><td>  </td></tr>
+<tr><td>Oct 18</td><td class="has-text-align-left" data-align="left">@Wisconsin </td><td>3:30 CBS </td><td>W 34 - 0  </td><td>  </td></tr>
 <tr><td>Oct 25</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Nov 01</td><td class="has-text-align-left" data-align="left">Penn State </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Nov 08</td><td class="has-text-align-left" data-align="left">@Purdue    </td><td>TBA</td><td>W</td><td>  </td></tr>
@@ -180,6 +180,7 @@ Email: <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave 
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
 
 </bodyl>
+
 
 
 
