--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Dec 06</td><td class="has-text-align-left" data-align="left">@B1G v Indiana </td><td>6:30 Fox </td><td> L 10 - 13 </td><td> B1G Championship </td></tr>
 </table></center>
 
-<center><h3> Dec 31, 2025 Cotton Bowl (CFP quarterfinal) vs. ??? W   </h3></center>
+<center><h3> Dec 31, 2025 Cotton Bowl (CFP quarterfinal) 7:30 ESPN vs. Miami W   </h3></center>
 <center><h3> Jan 8-9, 2026  Fiesta/Peach Bowl (CFP Semifinal) vs. ??   </h3></center>
 <center><h3> Jan 19, 2026 CFP Final vs. ??? W   National Champs!</h3></center>
 
@@ -186,6 +186,7 @@ Email: <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave 
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
 
 </bodyl>
+
 
 
 
